--- a/biblio.bib
+++ b/biblio.bib
@@ -904,3 +904,12 @@
   volume = {230},
   pages = {763-788}
 }
+@Article{larsen_dsa,
+  title = {{Diffusion-Synthetic Acceleration Methods for Discrete-Ordinates
+    Problems}},
+  author = {E. W. Larsen},
+  journal = {Transport Theory and Statistical Physics},
+  year = {1984},
+  volume = {13},
+  pages = {107-126}
+}
