--- a/introduction.tex
+++ b/introduction.tex
@@ -28,12 +28,12 @@ have been successfully used to solve the transport equation on arbitrary
 polygonal meshes. PieceWise Linear Continuous finite elements have been used to 
 discretize the diffusion equation and have shown to be second order and to
 produce a symmetric positive (SPD) matrix \cite{pwl_diffusion}. However, no 
-Diffusion Synthetic Acceleration (DSA) \cite{dsa_ref} was developed using this 
-discretization and to the best of our knowledge, there is no DSA for arbitrary
-polygonal mesh. In this work, we remedy this lack by adapting the Modified Interior 
-Penalty (MIP) DSA developed in \cite{mip} for triangular cells. By using PWLD 
-finite elements with MIP, MIP will be able to work on arbitrary polygonal 
-cells. Since MIP produces SPD equations, it has usually 
+Diffusion Synthetic Acceleration (DSA) \cite{dsa_ref,larsen_dsa,consistent_p1} 
+was developed using this discretization and to the best of our knowledge, there is 
+no DSA for arbitrary polygonal mesh. In this work, we remedy this lack by adapting 
+the Modified Interior Penalty (MIP) DSA developed in \cite{mip} for triangular 
+cells. By using PWLD finite elements with MIP, MIP will be able to work on 
+arbitrary polygonal cells. Since MIP produces SPD equations, it has usually 
 been solved using conjugate gradient (CG) preconditioned by SSOR. In this
 article, the effectiveness of algebraic multigrid methods (AMG) to precondition 
 the Krylov solver \cite{amg,amg_course} will be tested. Algebraic multigrid methods 
