Done with the introduction and mip sections.

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -40,8 +40,8 @@
 
 
 \begin{document}
-\title{Discontinuous Diffusion Synthetic Acceleration for Sn transport on
-arbitrary polygonal meshes}
+\title{Discontinuous Diffusion Synthetic Acceleration for Sn Transport on
+Arbitrary Polygonal Meshes}
 \author{} 
 \date{}
 \maketitle
