--- a/results.tex
+++ b/results.tex
@@ -24,10 +24,10 @@ Gauss-Legendre-Chebyshev quadrature. The medium is homogeneous, the scattering
 ratio  and periodic boundary conditions are used. The $x-$axis is the mesh
 size in mean free path and the $y-$axis is the spectral radius. There are four
 curves corresponding to different $S_n$ order: $S_2$, $S_4$, $S_8$ and
-$S_{16}$.
+$S_{16}$ with $c=0.9999$.
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{sn_order}
+\includegraphics[width=0.5\textwidth]{sn_order_9999}
 \caption{Fourier analysis as a function of the mesh optical thickness,
 homogeneous infinite medium case.}
 \end{figure}
