--- a/biblio.bib
+++ b/biblio.bib
@@ -913,3 +913,20 @@
   volume = {13},
   pages = {107-126}
 }
+@Article{textbook_eff,
+  title = {{Textbook Multigrid Efficiency for Fluid Simulations}},
+  author = {James L. Thomas and Boris Diskin and Achi Brandt},
+  journal = {Annual Review of Fluid Mechanics},
+  year = {2003},
+  month = {January},
+  volume = {35},
+  pages = {317-340}
+}
+@Article{graph_coloring,
+  title = {{A Parallel Graph Coloring Heuristic}},
+  author = {Mark T. Jones and Paul E. Plassmann},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {1992},
+  volume = {14},
+  pages = {654}
+}
